<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asteroides</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="titulo">Asteroides</string>
    <string name="jugar">Jugar</string>
    <string name="configurar">Configurar</string>
    <string name="acercade">Acerca de</string>
    <string name="salir">Salir</string>
    <string name="acerccadeTexto">Este programa ha sido desarrollado como ejemplo en el curso de Android para demostrar cómo se pueden lanzar nuevas actividades desde la actividad principal.</string>
    <string name="puntuaciones">Puntuaciones</string>
    <string name="sinPuntuaciones">No hay puntuaciones</string>
    <string name="descripcionIcono">Imagen de un asteroide</string>
    <string name="otroTexto">Otro texto</string>
    <string name="rMusica">Reproducir música</string>
    <string name="sMusica">Se reproduce música de fondo</string>
    <string name="tGraficos">Tipo de gráficos</string>
    <string name="sGraficos">Se escoge la representación de gráficos</string>
    <string name="nFragmentos">Número de Fragmentos</string>
    <string name="sFragmentos">En cuantos trozos se divide un asteroide</string>
    <string name="vectorial">vectorial</string>

</resources>