<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="@dimen/sup"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/degradado"
    tools:context=".Asteroides" >

    <TextView
        android:id="@+id/textView1"
        style="@style/TextoAsteroides"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/titulo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button1"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarJuego"
        android:text="@string/jugar" />

    <Button
        android:id="@+id/button2"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarPreferencias"
        android:text="@string/configurar" />

    <Button
        android:id="@+id/button3"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarAcercaDe"
        android:text="@string/acercade" />

    <Button
        android:id="@+id/button4"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarPuntuaciones"
        android:text="@string/puntuaciones" />

    <Button
        android:id="@+id/button5"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="terminar"
        android:text="@string/salir" />

</LinearLayout>